brat/test/golden/error/fanout-diff-types.brat.golden
Error in test/golden/error/fanout-diff-types.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [/\] }
    ^^^^^^^^

  Type mismatch when checking [/\]
Expected: (b1 :: Bit)
But got:  (head :: Qubit)


